# solana-assign

./: .gitmodules  CMakeLists.txt  README.md  config.cmake
core/: CMakeLists.txt
core/event-handler/: EventHandler.cpp  EventHandler.hpp  IEventHandler.hpp
core/storage/: IStorage.hpp  Storage.hpp
engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
network/: CMakeLists.txt
network/curl-wrapper/: CurlWrapper.cpp  CurlWrapper.hpp
network/request-manager/: RequestManager.cpp  RequestManager.hpp
src/: command-line-app.cpp  standard-deviation-tracking.cpp
